--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <script>
 /*Using Jquery Load()*/
-$('#Load').load('http://www.google.com');
+$('#Load').load('http://localhost/cvadmin');
 
 /*Using ajax*/
 $.ajax({
   dataType:'html',
-  url:'http://www.google.co.in',
+  url:'http://localhost/cvadmin',
   success:function(data) {
     $('#ajax').html($(data).children());   
   }
